feat: configuring login

--- a/djangocrm/templates/base.html
+++ b/djangocrm/templates/base.html
@@ -12,6 +12,12 @@
 <body>
     {% include 'navbar.html' %}
     <div class="container">
+        {% if messages %}
+            {% for message in messages %}
+                {{message}}
+            {% endfor %}
+        {% endif %}
+
         {% block content %}
         {% endblock %}
     </div>
